# C_game_projects

./: README.md  eduquest.c  guessing_game  guessing_game.c  tasks.json  to-do-tactician  to-do-tactician.c  word_scrambler  word_scramler.c
EduQuest/: CMakeLists.txt  Makefile  eduquest
EduQuest/player/: player_solutions.c
EduQuest/src/: analytics.c  analytics.h  challenge.c  challenge.h  common.h  content_arrays.c  content_arrays.h  core.h  event_bus.c  event_bus.h  main.c  player_api.h  profile.h  save.c  save.h
